First commit - Add the HTML markup

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,61 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header class="header">
+    <img src="./images/brand.png" alt="Instagram's brand" class="brand">
+    <a href="#" class="button button--login"><img src="./images/home.png" alt="Home icon">Log in</a>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <main class="main">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <!-- Left section of the body -->
+    <section class="section section--left">
+      <img src="./images/phones.png" alt="Iphone">
+    </section>
 
-  Oh yeah, did we mention it's free?
+    <!-- Right section of the body -->
+    <section class="section section--right">
+      <h2 class="title">Capture and Share the World's Moments</h2>
+      <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p class="text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p class="text">Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <!-- Downloads links -->
+      <div class="downloads">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <!-- Download for IOS -->
+        <a href="#" class="downloads__link">
+          <img src="./images/badge-iphone.png" alt="Download for IOs link" class="downloads__image">
+        </a>
 
-  &copy; 2014 Instagram
+        <!-- Download for Android -->
+        <a href="#" class="downloads__link">
+          <img src="./images/badge-android.png" alt="Download for Android link" class="downloads__image">
+        </a>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+
+    <!-- Footer navigation -->
+    <nav class="footer-nav">
+      <ul class="footer-nav__list">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </nav>
+
+    <!-- Copyright -->
+    <p class="copyright">&copy; 2014 Instagram</p>
+  </footer>
 </body>
 </html>
