--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header class="header">
+    <div class="header-content">
+      <img class="header-content__image" src="images/brand.png" alt="Instagram">
+      <a class="header-content__button" href="#" target="_blank">
+        <p class="header-content__button--text">Log in</p>
+      </a>
+    </div>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="content">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="box-image">
+      <img src="images/phones.png" alt="Iphone" />
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="box-information">
+      <h1 class="box-information__title">Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+      <p class="box-information__text">Instagram is a <span class="box-information__text--black">fast</span>, <span
+          class="box-information__text--black">beatiful</span> and <span class="box-information__text--black">fun</span>
+        way to share your life with friends and family.</p>
+      <p class="box-information__text">Take a picture or video, choose a filter to transform its look and feel, then
+        post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new
+        way to see the world.</p>
+      <p class="box-information__text">Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="box-buttons">
+        <a href="#" target="_blank"><img class="box-buttons__items box-buttons__items--1" src="images/badge-iphone.png"
+          alt="Download on the App Store"></a>
+          <a href="#" target="_blank"><img class="box-buttons__items box-buttons__items--2" src="images/badge-android.png"
+          alt="Get it on Google Play"></a>
+      </div>
 
-  &copy; 2014 Instagram
+    </div>
+
+  </section>
+  <footer class="footer">
+    <nav class="menu">
+      <a class="menu__item" href="#">About Us</a>
+      <a class="menu__item" href="#">Support</a>
+      <a class="menu__item" href="#">Blog</a>
+      <a class="menu__item" href="#">Press</a>
+      <a class="menu__item" href="#">API</a>
+      <a class="menu__item" href="#">Jobs</a>
+      <a class="menu__item" href="#">Privacy</a>
+      <a class="menu__item" href="#">Terms</a>
+    </nav>
+    <p class="legal">&copy; 2014 Instagram</p>
+  </footer>
 </body>
+
 </html>
