--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,81 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="left">
+    <img src="images/phones.png" alt="">
+  </div>
+  
+  <div class="fondo">
+    <div class="azul"></div>
+    <div class="blanco"></div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="right">
+    <div class="titulos">
+      <h1>
+      <img src="images/brand.png" alt="">
+    </h1>
+    <div class="login"><img src="images/home.png" alt="log in"> Log in</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+    
+    <div class="text">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast</strong> fast, <strong>beautiful</strong> and <strong>fun</strong>  way to share your life with friends and family.
+      </p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+        easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p>Oh yeah, did we mention it's free?
+      </p>
+      <div class="moviles"> 
+        <img src="images/badge-android.png" alt="android">
+        <img src="images/badge-iphone.png" alt="iphone">
+      </div>
+    </div>
+    
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="insta"">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
+<!-- Instagram
+
+Capture and Share the World's Moments
+
+Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+Oh yeah, did we mention it's free?
+
+Download on the App Store
+Get it on Google Play
+
+
+
+
+
+
+
+
+
+
