--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+  </head>
 
-  Capture and Share the World's Moments
+  <body>
+    <div class="container">
+      <div class="phones">
+        <img src="./images/phones.png" alt="phones" />
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <div class="content">
+        <header>
+          <img src="./images/brand.png" alt="IG logo" />
+          <button>Log In</button>
+        </header>
+        <div class="back">  
+        <div>
+          <h1>Capture and Share the World's Moments</h1>
+        </div>
+        <div>
+          <p>
+            Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+            friends and family. Take a picture or video, choose a filter to
+            transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more.
+            It's a new way to see the world. Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="">
+          <a href="#"><img src="./images/badge-iphone.png" alt="App Store"/></a>
+          <a href="#"><img src="./images/badge-android.png" alt="Google Play"/></a>
+        </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <footer>
+        <nav>
+          <a href="#">ABOUT US</a>
+          <a href="#">SUPPORT</a>
+          <a href="#">BLOG</a>
+          <a href="#">PRESS</a>
+          <a href="#">API</a>
+          <a href="#">JOBS</a>
+          <a href="#">PRIVACY</a>
+          <a href="#">TERMS</a>
+          &copy; 2014 Instagram
+        </nav>
+      </footer>
+    </div>
+  </body>
 </html>
