--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,42 +2,50 @@
 <html lang="en">
   <head>
     <title>Instagram</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
+    <aside>
+      <img src="images/phones.png" alt="Phones" />
+    </aside>
     <section>
-    <div>
-      <img src="images/phones.png" alt="Phones"/>
-    </div>
-    <div>
-      <img src="images/brand.png" alt="Instagram" />
-      <button type="button"><img src="images/home.png" alt="Log in"/> Log in</button>
-    </div>
-    <div class="container">
-      <h1>Capture and Share the World's Moments</h1>
-      <p>Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span> and <span class="bold">fun</span> way to share your life with friends
-      and family.</p>
-      <p>Take a picture or video, choose a filter to transform its look
-      and feel, then post to Instagram &mdash; it's that easy. You can even
-      share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-      world.</p>
-      <p>Oh yeah, did we mention it's free?</p>
-      <img src="images/badge-iphone.png" alt="Download on the App Store" />
-      <img src="images/badge-android.png" alt="Get it on Google Play" />
-    </div>
-  </section>
-  <footer>
-    <ul>
-      <li><a href="" alt="About us">About Us</a></li>
-      <li><a href="" alt="Support">Support</a></li>
-      <li><a href="" alt="Blog">Blog</a></li>
-      <li><a href="" alt="Press">Press</a></li>
-      <li><a href="" alt="API">API</a></li>
-      <li><a href="" alt="Jobs">Jobs</a></li>
-      <li><a href="" alt="Privacy">Privacy</a></li>
-      <li><a href="" alt="Terms">Terms</a></li>
-      <li>&copy; 2014 Instagram</li>
-    </ul>
-  </footer>
+      <div class="logo">
+        <img src="images/brand.png" alt="Instagram" />
+        <button type="button">
+          <img src="images/home.png" alt="Log in" /> Log in
+        </button>
+      </div>
+      <div class="container">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <span class="bold">fast</span>,
+          <span class="bold">beautiful</span> and
+          <span class="bold">fun</span> way to share your life with friends and
+          family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="Download on the App Store" />
+        <img src="images/badge-android.png" alt="Get it on Google Play" />
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="" alt="About us">About Us</a></li>
+        <li><a href="" alt="Support">Support</a></li>
+        <li><a href="" alt="Blog">Blog</a></li>
+        <li><a href="" alt="Press">Press</a></li>
+        <li><a href="" alt="API">API</a></li>
+        <li><a href="" alt="Jobs">Jobs</a></li>
+        <li><a href="" alt="Privacy">Privacy</a></li>
+        <li><a href="" alt="Terms">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
