css change to align text section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,13 +10,13 @@
     </aside>
     <section>
       <div class="logo">
-        <img src="images/brand.png" alt="Instagram" />
+        <img id="logo_image" src="images/brand.png" alt="Instagram" />
         <button type="button">
           <img src="images/home.png" alt="Log in" /> Log in
         </button>
       </div>
       <div class="container">
-        <h1>Capture and Share the World's Moments</h1>
+        <h1>Capture and Share <br />the World's Moments</h1>
         <p>
           Instagram is a <span class="bold">fast</span>,
           <span class="bold">beautiful</span> and
