--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-  Instagram
+  <header class="screenshot">
+    <img src="../starter-code/images/Screenshot 2019-08-19 at 22.56.51.png" />
+  </header>
 
-  Capture and Share the World's Moments
+  <section class="phones">
+    <img src="../starter-code/images/phones.png" />
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="log-in">
+    <img src="../starter-code/images/brand.png" />
+    <button class="log-in"><img src="../starter-code/images/home.png" />Log in</button>
+  </section>
+  <p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Instagram
 
-  Oh yeah, did we mention it's free?
+    Capture and Share the World's Moments
 
-  Download on the App Store
-  Get it on Google Play
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+    easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  &copy; 2014 Instagram
+    Oh yeah, did we mention it's free?
+
+    Download on the App Store
+    Get it on Google Play
+
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+    <img src="../starter-code/images/frame.png" />
+    <p />
+    &copy; 2014 Instagram
 </body>
+
 </html>
