Fix the text in the main content. Add some strong tags that I had forgotten

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -28,7 +28,7 @@
       <!-- Right section of the body -->
       <section class="section section--right">
         <h2 class="title">Capture and Share the World's Moments</h2>
-        <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p class="text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p class="text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p class="text">Oh yeah, did we mention it's free?</p>
         
