--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,67 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="wrapper">
+    <div class="bgtile"></div>
+    <div class="container">
+      <div class="content">
+        <div class="phone">
+          <img src="./images/phones.png" alt="Phones">
+        </div>
+        <div class="about-ig">
+            <div class="top">
+                <h1>
+                  <a href="#">
+                    <img class="brand-logo" src="./images/brand.png" alt="Instagram">
+                  </a>
+                </h1>
+  
+                <a class="btn-login" href="#">
+                  <img src="./images/home.png" alt="Log in">
+                  Log in
+                </a>
+              </div>
+              
+            <article>
+                <h2>Capture and Share <br> the World's Moments</h2>
+  
+                <div>
+                  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                  <P>Oh yeah, did we mention it's free?</P>
+                </div>
+  
+                <ul class="actions">
+                  <li><a href="#">
+                    <img src="./images/badge-iphone.png" alt="Download on the App Store">
+                  </a></li>
+                  <li><a href="#">
+                    <img src="./images/badge-android.png" alt="Get it on Google Play">
+                  </a></li>
+                </ul>
+              </article>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      
+      <span>&copy; 2014 Instagram</span>
+    </footer>
 </body>
 </html>
