--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+  </head>
+  <body>
+    <section >
+      <div class="superior">
+        <div class="box-phones">
+          <img src="images/phones.png" alt="phones" />
+        </div>
+        <div class="contenido">
+          <div class="top-bar">
+            <div class="box-brand">
+              <img src="images/brand.png" alt="Instagram" />
+            </div>
+            <div class="box-button">
+              <a class="button" href="#">
+                <img class="home" src="images/home.png" alt="home" />
+                   Log in
+              </a>
+            </div>
+          </div>
 
-  Capture and Share the World's Moments
+          <div class="description">
+            <h2 class="tittle-2">Capture and Share the World's Moments</h2>
+            <p class="text-description">
+              Instagram is a
+              <span>fast, beautiful</span>
+              and
+              <span>fun</span>
+              way to share your life with friends and family.
+            </p>
+            <p class="text-description">
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p class="text-description">
+              Oh yeah, did we mention it's free?
+            </p>
+          </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+          <div class="badges">
+            <div class="iphone">
+              <img
+                src="images/badge-iphone.png"
+                alt="Download on the App Store"
+              />
+            </div>
+            <div class="android"></div>
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul class="list-links">
+        <li><a class="link" href="#">Support</a></li>
+        <li><a class="link" href="#">Blog</a></li>
+        <li><a class="link" href="#">Press</a></li>
+        <li><a class="link" href="#">About Us</a></li>
+        <li><a class="link" href="#">API</a></li>
+        <li><a class="link" href="#">Jobs</a></li>
+        <li><a class="link" href="#">Privacy</a></li>
+        <li><a class="link" href="#">Terms</a></li>
+      </ul>
+      <p class="copyright">&copy; 2014 Instagram</p>
+    </footer>
+  </body>
 </html>
