--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
+    />
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="phone-image">
+    <img src="images/phones.png" alt="Phones image">
+  </div>
+  <div class="info-box">
+    <div class="top-tab">
+        <img class="logo" src="images/brand.png" alt="Instagram">
+        <div class="login">
+          <img src="images/home.png" alt="Home icon">
+          <h2>Log in</h2>
+        </div>
+    </div>
+    <div class="text-box">
+        <h1>Capture and Share the World's Moments</h1>
+        <ul>
+          <li>Instagram is a fast, beautiful and fun way to share your life with friends and family.</li>
+          <li>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </li>
+          <li> Oh yeah, did we mention it's free? </li>
+        </ul>
+    </div> 
+  </div>
+  <div class="bottom-tab">
+      <img src="images/badge-iphone.png" alt="Download on the App Store">
+      <img src="images/badge-android.png" alt="Get it on Google Play"> 
+  </div>
+  
+  <nav> 
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </nav>
+  
 </body>
 </html>
