--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <div class="central">
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="phones">
+      <img src="images/phones.png">
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div>
 
-  &copy; 2014 Instagram
+      <div class="home">
+
+        <img src="images/brand.png">
+
+        <div class="button">
+          <img src="images/home.png">
+          <a href="https://www.instagram.com/accounts/login/?source=auth_switcher">
+            <p class="log">Log in</p>
+          </a>
+
+        </div>
+
+      </div>
+
+      <div class="text">
+        <h2>Capture and Share the World's Moments</h2>
+
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+
+          Oh yeah, did we mention it's free?</p>
+
+
+
+        <a href="https://apps.apple.com/es/app/instagram/id389801252"><img src="images/badge-iphone.png"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es"><img
+            src="images/badge-android.png"></a>
+      </div>
+
+    </div>
+  </div>
+
+  <footer>
+
+
+    <a href="https://www.instagram.com/about/us/"> About Us</a>
+    <a href="https://help.instagram.com/">Support</a>
+    <a href="https://business.instagram.com/blog?"> Blog</a>
+    <a href="https://instagram-press.com/"> Press</a>
+    <a href="https://www.instagram.com/developer/"> API</a>
+    <a href="https://www.instagram.com/about/jobs/"> Jobs</a>
+    <a href="https://www.instagram.com/legal/privacy/"> Privacy</a>
+    <a href="https://www.instagram.com/legal/terms/"> Terms</a>
+
+    <p>&copy;2014 Instagram</p>
+
+  </footer>
+
+
 </body>
+
 </html>
