--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  Capture and Share the World's Moments
+  <body>
+      <div class="block">
+    <header><img src="./images/brand.png" alt="Instagram" /></header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <h1>Capture and Share the World's Moments</h1>
+    <div>
+      <p>
+        Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+        friends and family. Take a picture or video, choose a filter to
+        transform its look and feel, then post to Instagram &mdash; it's that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a
+        new way to see the world. Oh yeah, did we mention it's free?
+      </p>
+    </div>
+    <div>
+      <img src="./images/badge-android.png" alt="Download on the App Store" />
+      <img src="./images/badge-iphone.png" alt="Get it on Google Play" />
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <nav-bar>
+      <b> About Us Support Blog Press API Jobs Privacy Terms </b>
+    </nav-bar>
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer>&copy; <b> 2014 Instagram </b></footer>
+  </body>
 </html>
