--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="color-band-bkg"></div>
+
   <section>
   <div class="main-box">
 
@@ -19,7 +19,7 @@
         </header>
         
         <div class="text-box">
-            <h1>Capture and Share the World's Moments</h1>
+            <h1>Capture and Share <br>the World's Moments</h1>
         
             <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
               Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
