--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,7 +19,7 @@
         <nav class="logo">
           <img src="images/brand.png" alt="Instagram"/>
           <button type="submit" value="Submit">
-            <img src="images/home.png" alt="home">Log in
+            <img src="images/home.png" alt="home"><span class="login">Log in</span>
           </button>
         </nav>
     
@@ -27,7 +27,7 @@
     
           <div class="text-description">
             <h1>Capture and Share the World's Moments</h1>
-              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+              <p>Instagram is a <span class="strong-words">fast</span>, <span class="strong-words">beautiful</span> and <span class="strong-words">fun</span> way to share your life with friends and family.</p>
               <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>    
               <p>Oh yeah, did we mention it's free?</p>
             <ul class="download">
