--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <img src="./images/phones.png" alt="phones" />
+      </div>
+      <div class="main-body">
+        <div>
+          <img src="./images/brand.png" alt="Instagram" />
+          <a href="#">Log in</a>
+        </div>
+        <div>
+          <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+          <p>
+            Instagram is a <span>fast</span>, <span>beautiful</span> and
+            <span>fun</span> way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world. Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div>
+          <img
+            src="./images/badge-iphone.png"
+            alt="Download on the App Store"
+          />
+          <img src="./images/badge-android.png" alt="Get it on Google Play" />
+        </div>
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="#" class="bottom-link link1">About Us</a>
+          <a href="#" class="bottom-link link2">Support</a>
+          <a href="#" class="bottom-link link3">Blog</a>
+          <a href="#" class="bottom-link link4">Press</a>
+          <a href="#" class="bottom-link link5">API</a>
+          <a href="#" class="bottom-link link6">Jobs</a>
+          <a href="#" class="bottom-link link7">Privacy</a>
+          <a href="#" class="bottom-link link8">Terms</a>
+          <a href="#" class="bottom-link link9">&copy; 2014 Instagram</a>
+        </li>
+      </ul>
+    </nav>
+  </body>
 </html>
