--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
 
-  <body>
-    <div class="container">
+  <body class="container">
+    <div>
       <div class="phones">
         <img src="./images/phones.png" alt="phones" />
       </div>
@@ -22,7 +22,7 @@
           <button>Log In</button>
         </header>
         <div class="back">  
-        <div>
+        <div class="title">
           <h1>Capture and Share the World's Moments</h1>
         </div>
         <div>
@@ -34,7 +34,7 @@
             It's a new way to see the world. Oh yeah, did we mention it's free?
           </p>
         </div>
-        <div class="">
+        <div class="badges">
           <a href="#"><img src="./images/badge-iphone.png" alt="App Store"/></a>
           <a href="#"><img src="./images/badge-android.png" alt="Google Play"/></a>
         </div>
