--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,46 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Instagram</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-<diz>
-  <img src="images/phones.png" alt="phone">
-</div>
-<section>
-  <div id="login">
-    <img src="../images/brand.png" alt="Instagram">
-  </div>
-  <div id="description">
-    <h1>Capture and Share the World's Moments</h1>
-    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-      </p>
-    <p>  Oh yeah, did we mention it's free?
-
-      </p>
-  </div>
-  <div id="logos">
-    <img src="../images/badge-iphone.png" alt ="iphone">
-    <img src="../images/badge-android.png" alt ="android">
-  </div>
-
-</section>
-
-<footer>
-  <ul>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
-    <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-    <li>"copyright">
-        &copy;2014 Instagram</li>
-  </ul>
-</footer>
-</body>
-</html>
+	<html lang="en">
+	<link rel="stylesheet" href="./css/main.css">
+	
+	<head>
+	  <title>Instagram</title>
+	</head>
+	
+	<body>
+	 
+	  <main>
+	    <section id="index">
+	
+	      <aside class="Phone">
+	        <div class="imgPhone">
+	          <img src="./images/phones.png" alt="phone">
+	        </div>
+	      </aside>
+	
+	      <section class="content">
+	        <section class="logo">
+	          <div class="imgBrand">
+	            <img src="./images/brand.png" alt="brand">
+	          </div>
+	
+	          <a href="#">
+	            <button>
+	              <div class="imgHome">
+	                <img src="./images/home.png" alt="home">
+	              </div>
+	                log in
+	            </button>
+	          </a>
+	        </section>
+	
+	        <article class="frame" >
+	          <div class="text">
+	            <p>
+	              <h1>Capture and Share
+	                <br>
+	                the World's Moments</h1>
+	            </p>
+	            <p>
+	              Instagram is a fast, beautiful and fun way to share your life with friends and family.
+	            </p>
+	            <p>
+	              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+	              it's
+	              that
+	              easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+	            </p>
+	            <p>
+	              Oh yeah, did we mention it's free?
+	            </p>
+	          </div>
+	        </article>
+	
+	  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+	        <article class="app">
+	          <div class="imgIphone">
+	            <a href="#" target="_blank">
+	              <img src="./images/badge-iphone.png" alt="badge-iphone">
+	            </a>
+	          </div>
+	
+	  Oh yeah, did we mention it's free?
+	          <div class="imgAnd">
+	            <a href="#" target="_blank">
+	              <img src="./images/badge-android.png" alt="badge-android">
+	            </a>
+	          </div>
+	        </article>
+	      </section>
+	    </section>
+	
+	  Download on the App Store
+	  Get it on Google Play
+	
+	  About Us
+	  Support
+	  Blog
+	  Press
+	  API
+	  Jobs
+	  Privacy
+	  Terms
+	    <footer>
+	
+	  &copy; 2014 Instagram
+	      <a href="#"> About Us</a>
+	      <a href="#">Support</a>
+	      <a href="#"> Blog</a>
+	      <a href="#">Press</a>
+	      <a href="#">API</a>
+	      <a href="#">Jobs</a>
+	      <a href="#">Privacy</a>
+	      <a href="#">Terms</a>
+	
+	      &copy; 2014 Instagram
+	    </footer>
+	  </main>
+	</body>
+	</html>
+	
+	
+	
+	</html>
