--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  <section>
-    <h1>Instagram</h1>
-  </section>
-<section>
-  <h3>Capture and Share the World's Moments</h3>
-
-<p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-</p>
-<p>
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-</p>
-<p>
-  Oh yeah, did we mention it's free?
-</p>
-</section>
-<section>  
-  Download on the App Store
-  Get it on Google Play
-</section>
-<section>
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-  &copy; 2014 Instagram
-  </section>
-</body>
+  <head>
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <!-- Caja izquierda (imagenes celulares)-->
+    <section>
+      <img src="./images/phones.png" alt="phones" />
+    </section>
+    <!--Caja derecha-->
+    <section>
+      <!--Section 1-->
+      <section class="flexbox-insta">
+        <img src="./images/brand.png" alt="Instagram" />
+        <button>
+          <img src="./images/home.png" alt="log in" />
+          <span>Log in</span>
+        </button>
+      </section>
+      <!--Section 2-->
+      <section id="section2">
+        <h3>
+          Capture and Share <br />
+          the World's Moments
+        </h3>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life <br />
+          with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look <br />
+          and feel, then post to Instagram - it's that easy. You can <br />
+          even share to Facebook, Twitter, Tumblr and more. It's <br />
+          a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </section>
+      <section class="logos">
+        <img src="./images/badge-iphone.png" alt="Download on the App Store Get it on Google Play" />
+        <img src="./images/badge-android.png" alt="Get it on Google Play" />
+      </section>
+    </section>
+    <!--Footer-->
+    <footer>
+      <ul class="ul">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>@2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
