instagram  iteration 2 updates

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <div id= "top">
@@ -12,7 +12,11 @@
 
     </header>
     <div>
-        <button type="login">Log in<img src="images/home.png" alt="home"></button>
+      <img src="" alt="">
+      <button type = 'login'>
+        <label for="log _in">Log_in</label>
+        <img src="images/home.png" alt="home">
+      </button>
     </div>
   </div>
   <div id = "btm">
