--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <link rel="stylesheet" href="/starter-code/css/main.css" />
+    <title>Instagram</title>
+  </head>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <body>
+    <div id="whole">
+      <section id="square">
+        <img src="images/phones.png" alt="Instagram filters" />
+        <span>
+          <img src="/starter-code/images/brand.png" alt="Instagram logo" />
+          <button><img src="/starter-code/images/home.png" alt="Login" />Log in</button>
+        </span>
+        <div id="mainBox">
+          <h2>
+            Capture and Share <br />
+            the World's Moments
+          </h2>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.<br />
+            Take a picture orvideo,choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br />
+            Oh yeah, did we mention it's free?
+          </p>
+          <div id="imagenes">
+            <img src="images/badge-iphone.png" alt="Instagram Appstore" />
+            <img src="images/badge-android.png" alt="Instagram Google Play" />
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div>
+          <p>About Us</p>
+          <p>Support</p>
+          <p>Blog</p>
+          <p>Press</p>
+          <p>API</p>
+          <p>Jobs</p>
+          <p>Privacy</p>
+          <p>Terms</p>
+          <p>&copy; 2014 Instagram</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
