--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <section>
+    <div class="phones">
+      <img src="./images/phones.png" alt="phones">
+    </div>
 
-  Capture and Share the World's Moments
+    <div id="container">
+      <div id="titulo-login">
+        <img src="./images/brand.png" alt="Instagra logo">
+        <button type="button"><img src="./images/home.png" alt="Home icon"> <span>Log in</span></button>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="whitebox">
+        <h1> Capture and Share <br> the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life <br>
+          with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+        <p> Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash;
+          it's that
+          easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.
+        </p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p> Oh yeah, did we mention it's free? </p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div>
+          <img src="./images/badge-iphone.png" alt="Appstore logo">
+          <img src="./images/badge-android.png" alt="Android logo">
+        </div>
 
-  &copy; 2014 Instagram
+
+      </div>
+
+    </div>
+  </section>
+  <footer>
+
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li id="lightgrey"> &copy; 2014 Instagram</li>
+    </ul>
+
+
+  </footer>
 </body>
+
 </html>
