done the button is not perfect

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div id="blue-header"></div>
+    <div class="container">
+      <img src="./images/phones.png" alt="smartphones" />
+      <div class="details">
+        <div class="container-between">
+          <img id="logo" src="./images/brand.png" alt="instagram logo" />
+          <button class="container-button">
+            <img id="button-img" src="./images/home.png" alt="" />
+            <p>Log in</p>
+          </button>
+        </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+        <div class="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share
+            to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div><img src="./images/badge-iphone.png" alt="go to App store" /> <img src="./images/badge-android.png" alt="go to Google play" /></div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul class="container">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copywrite">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
