--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="total">
+    <div class="container">
+      <div class="image">
+        <img src="./images/phones.png" alt="Phone">
+      </div>
+      <div class="instagram">
+        <div class="logo">
+          <img src="./images/brand.png" alt="Instagram" width="300px">
+          <a href="#" class="log-in">Log in</a>
 
-  Capture and Share the World's Moments
+        </div>
+        <div class="frame">
+          <h1>Capture and Share<br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b>  and <b>fun</b> way to share your life<br> 
+          with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <p>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash;
+              it's
+              that
+              easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+           <p> Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+        </div>
+        <div class="mkt">
+          <img src="./images/badge-iphone.png" alt="Download on the App Store">
+          <img src="./images/badge-android.png" alt="Get it on Google Play">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ul>
+        <b>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="ano">&copy; 2014 Instagram</li>
 
-  &copy; 2014 Instagram
+      </b>
+      </ul>
+    </div>
+  </div>
+
 </body>
+
 </html>
