--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="bgcBlue"></div>
+  <img src="./images/phones.png" alt="phones" class="phones">
+  <div class="card">
+    <div class="card-header">
+      <img src="./images/brand.png" alt="brand">
+      <a href="#"><img src="./images/home.png" alt="home"> Log in</a>
+    </div>
+    <div class="content">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <img src="./images/badge-iphone.png" alt="iphone">
+    <img src="./images/badge-android.png" alt="android">
+  </div>
+  <footer>
+    <a href="#">About us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">Api</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
 </body>
 </html>
