instagram excercise completed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+    <div class="main-frame">
+  <div class="principal">
+    <div class="cabecalho">
+      <img src="images/brand.png" alt="Logo do Instagram">
+      <div class="homes">
+        <img src="images/home.png" alt="Casinha representando Home">
+        Log in
+      </div>
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="informacoes">
+      <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+      <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="btn">
+      <img src="images/badge-iphone.png" alt="Icone de download pela app Store">
+      <img src="images/badge-android.png" alt="Icone de download pelo google play">
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+  <div class="imagem-celular">
+    <img src="images/phones.png" alt="Telefones Celulares">
+  </div>
+</div>
+  <div class="rodape">
+    <ul>
+      <li><a href="#" >About Us</a></li>
+      <li><a href="#" >Support</a></li>
+      <li><a href="#" >Blog</a></li>
+      <li><a href="#" >Press</a></li>
+      <li><a href="#" >API</a></li>
+      <li><a href="#" >Jobs</a></li>
+      <li><a href="#" >Privacy</a></li>
+      <li><a href="#" >Terms</a></li>
+    </ul>
+    <div id="insta"> &copy; 2014 Instagram </div>
+  </div>
 </body>
+
 </html>
