--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class=" margin-set">
+    <div class="container"> 
 
-  Capture and Share the World's Moments
+    
+    <section>
+      <img src="./images/phones.png" alt="phones">
+    </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="main">
+      <div class="inst-header">
+        <div id="logo">
+          <img src="./images/brand.png" alt="inst">
+        </div>
+        <div>
+          <button>
+            <img src="./images/home.png" alt="home">
+            Log in
+          </button>
+        </div>
+      </div>
+      <div class="inst-descrip">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <div>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+              that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        
+        <a href="">
+          <img src="./images/badge-iphone.png" alt="appstore">
+        </a>
+        <a href="">
+          <img src="./images/badge-android.png" alt="android">
+        </a>
+      </div>
+    </section>
+  </div>
+  
+  </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <ul>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
