--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div id="empty">
+      </div>
+  <section>
+    <div>
+      <img src="./images/phones.png" alt="">
+    </div>  
+    <div id="blc1">
+      <nav>
+      <div>
+<img src="./images/brand.png" alt="">
+      </div>
+      <a href="#"> <img src="./images/home.png" alt="login"> Log in 
+      </a>
+      </nav>
+      <div>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a </span>fast</span>, <span></span>beautiful</span> and <span></span>fun</span> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <img src="./images/badge-iphone.png" alt="">
+            <img src="./images/badge-android.png" alt="android">
+          </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <footer>
+    <nav>
+      <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li> &copy; 2014 Instagram</li>
+    </ul>
+    </nav>
+  </footer>
 </body>
 </html>
