--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+    <div class="first">
+    </div>
+    <section>
+        <div class="all">
+            <div class="phone">
+                <img src="images/phones.png" alt="Phone">
+            </div>
+            <div class="logo-and">
+                <div class="btn-and-logo">
+                    <div>
+                        <img id="logo-insta" src="images/brand.png" alt="logo">
+                    </div>
+                    <button id="btn-home" type="button" name="button"> <img id="img-home" src="images/home.png" alt="home"> Log in
+                    </button>
+                </div>
+                <div class="container">
+                    <div class="content">
+                        <h2>Capture and Share the World's Moments</h2>
+                        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
+                            with friends and family.</p>
 
-  Capture and Share the World's Moments
+                        <p> Take a picture or video, choose a filter to transform its look
+                            and feel, then post to Instagram &mdash;
+                            it's that easy. You can even share to Facebook, Twitter, Tumblr
+                            and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                        <p> Oh yeah, did we mention it's free?</p>
+                    </div>
+                    <div class="phones">
+                        <img src="images/badge-iphone.png" alt="iPhone">
+                        <img id="and-insta" src="images/badge-android.png" alt="Android">
+                    </div>
+                </div>
+            </div>
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="navbar">
+        <nav>
+            <a href="#">About Us</a>
+            <a href="#">Support</a>
+            <a href="#">Blog</a>
+            <a href="#">Press</a>
+            <a href="#">API</a>
+            <a href="#">Jobs</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <p>&copy; 2018 INSTAGRAM</p>
+        </nav>
+    </div>
 </body>
+
 </html>
