--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="blue"> </div>
+  <section class="display alignment">
+    <div><img src="images/phones.png" alt="phone" class="phone"></div>
+    <div>
+      <section class="display bloco">
+        <img src="images/brand.png" alt="logo" id="logo">
+        <div class="juntos">
+          <img src="images/home.png" alt="home" id="login"></img><span>Log in</span>
+        </div>
+      </section>
+      <article class="text">
+        <h1>
+          Capture and Share <br>
+          the World's Moments
+        </h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <p>Oh yeah, did we mention it's free? </p>
+        <div>
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png" class="android">
+        </div>
+      </article>
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</li></a>
+      <li><a href="#">Support</li></a>
+      <li><a href="#">Blog</li></a>
+      <li><a href="#">Press</li></a>
+      <li><a href="#">API</li></a>
+      <li><a href="#">Jobs</li></a>
+      <li><a href="#">Privacy</li></a>
+      <li><a href="#">Terms</li></a>
+      <li id="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
