--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,7 +22,8 @@
           <div>
             <img id="logo-insta" src="images/brand.png" alt="logo">
           </div>
-          <button id="btn-home" type="button" name="button"> <img id="img-home" src="images/home.png" alt="home"> Log in
+          <button id="btn-home" type="button" name="button">
+            <img id="img-home" src="images/home.png" alt="home"> Log in
           </button>
         </div>
         <div class="container">
